--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,20 @@
 # application.yml
+server:
+  port: 8080
+  ssl:
+    enabled: true
+    keyStore: tomcat.keystore
+    keyAlias: tomcat
+    keyStorePassword: 123456
+    keyStoreType: JKS
+
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/web_rtc?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=GMT%2B8&useSSL=false
     username: root
     password: 123456
+
 
 mybatis-plus:
   configuration:
