--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
             <version>3.0.1</version>
         </dependency>
 
+        <!-- fastJson-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.60</version>
+        </dependency>
 
         <dependency>
             <groupId>org.freemarker</groupId>
